--- a/lab9/lab4/login.html
+++ b/lab9/lab4/login.html
@@ -83,10 +83,12 @@
               </div>
             </div>
           </div>
-          <input class="btn btn-primary login_btn" type="submit" value="Submit">
+          <input class="btn btn-primary login_btn" type="submit" id="login" value="Submit">
         </form>
     </div>
   </main>
 </body>
 <script src="dist/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="dist/js/app.js"></script>
 </html>
