--- a/lab9/lab4/product.html
+++ b/lab9/lab4/product.html
@@ -52,7 +52,7 @@
   </header>
 
   <main role="main" class="flex-shrink-0">
-    <div class="container">
+    <div class="container" id="container">
       <h3 class="mt-5">New Product Form</h3>
       <form method="GET" action="#">
         <div class="row">
@@ -98,7 +98,7 @@
             title="Dates should be in the range 2019-01-01 upto 2022-04-24" value="" min="2019-01-01" max="2022-04-24" required>
           </div>
         </div>
-        <input class="btn btn-outline-info pdt_btn" type="submit" value="Add Product">
+        <input class="btn btn-outline-info pdt_btn" type="submit" id="addProduct" value="Add Product">
         <!-- <button type="button" class="btn btn-outline-info pdt_btn">Add Product</button> -->
         <button type="button" class="btn btn-outline-warning pdt_btn">Cancel</button>
         <button type="button" class="btn btn-outline-primary pdt_btn">Reset</button>
@@ -107,4 +107,6 @@
   </main>
 </body>
 <script src="dist/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="dist/js/app.js"></script>
 </html>
