--- a/lab9/lab4/login.html
+++ b/lab9/lab4/login.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item active">
-            <a class="nav-link" href="#">Suppliers</a>
+            <a class="nav-link" href="#">Login</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
